--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         // Tổng xác suất = 1.0 chính xác
         var prizes = [
           {
-            text: "Chào mừng bạn đến với ITC",
+            // text: "Chào mừng bạn đến với ITC",
+            text: "Chúc bạn may mắn lần sau",
             img: "images/hengaplai.png",
             percentpage: 0.45
           },
@@ -50,7 +51,8 @@
             percentpage: 0.02
           },
           {
-            text: "Chào mừng bạn đến với ITC",
+            // text: "Chào mừng bạn đến với ITC",
+            text: "Chúc bạn may mắn lần sau",
             img: "images/hengaplai.png",
             percentpage: 0.45
           },
