--- a/index.html
+++ b/index.html
@@ -151,10 +151,12 @@
                       backdrop: false,
                       allowOutsideClick: false
                     });
-                  } else if (prizeText === 'Chào mừng bạn đến với ITC' || prizeText.includes('may mắn')) {
+                  } else if (prizeText === 'Chúc bạn may mắn lần sau' || prizeText.includes('may mắn')) {
                     originalSwal.fire({
-                      title: 'CHÀO MỪNG',
-                      text: 'Tân sinh viên ITC Khóa 25',
+                      // title: 'CHÀO MỪNG',
+                      title: 'Bạn không trúng gì hết',
+                      // text: 'Tân sinh viên ITC Khóa 25',
+                      text: 'Chúc bạn may mắn lần sau',
                       imageUrl: prizeImg || './images/hengaplai.png',
                       imageWidth: 100,
                       imageHeight: 100,
