--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             // text: "Chào mừng bạn đến với ITC",
             text: "Chúc bạn may mắn lần sau",
             img: "images/hengaplai.png",
-            percentpage: 0.45
+            percentpage: 0.48
           },
           {
             text: "Chuột Bluetooth",
             img: "images/chuot2.png",
-            percentpage: 0.02
+            percentpage: 0.01
           },
           {
             text: "Bình nước",
@@ -48,18 +48,18 @@
           {
             text: "USB 3.2 Kingston",
             img: "images/usb.png",
-            percentpage: 0.02
+            percentpage: 0.01
           },
           {
             // text: "Chào mừng bạn đến với ITC",
             text: "Chúc bạn may mắn lần sau",
             img: "images/hengaplai.png",
-            percentpage: 0.45
+            percentpage: 0.48
           },
           {
             text: "Gấu bông",
             img: "images/gaubong.png",
-            percentpage: 0.04
+            percentpage: 0.00
           },
           {
             text: "Quà bí ẩn",
@@ -154,7 +154,7 @@
                   } else if (prizeText === 'Chúc bạn may mắn lần sau' || prizeText.includes('may mắn')) {
                     originalSwal.fire({
                       // title: 'CHÀO MỪNG',
-                      title: 'Bạn không trúng gì hết',
+                      title: 'Xu ghê, bạn không trúng gì hết',
                       // text: 'Tân sinh viên ITC Khóa 25',
                       text: 'Chúc bạn may mắn lần sau',
                       imageUrl: prizeImg || './images/hengaplai.png',
